# HOI

./: .gitignore  CITATION.cff  LICENSE  NOTICE.md  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: demonstrations.md  evaluation.md  highlights.md  method.md  results.md
experiments/: step_matched_30k.md
hoi/: __init__.py  algorithms.py  analysis.py  balancing.py  conditioning.py  data.py  evaluation.py  models.py  policies.py  rich_evaluation.py  train.py
results/: step_matched_30k_summary.csv
tests/: test_analysis.py  test_conditioning.py  test_core_methods.py
